k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: taskflow-ingress
  namespace: taskflow

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # Frontend
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80

          # Authentication API
          - path: /api/v1/auth
            pathType: Prefix

            backend:
              service:
                name: user-service
                port:
                  number: 5000

          # Task API
          - path: /api/v1/tasks
            pathType: Prefix

            backend:
              service:
                name: task-service
                port:
                  number: 5001
